--- a/bin/ctrldns/Dockerfile
+++ b/bin/ctrldns/Dockerfile
@@ -10,8 +10,8 @@ COPY ./crates/nanocl_stubs/Cargo.toml ./crates/nanocl_stubs/Cargo.toml
 COPY ./crates/nanocld_client/Cargo.toml ./crates/nanocld_client/Cargo.toml
 COPY ./bin/nanocl/Cargo.toml ./bin/nanocl/Cargo.toml
 COPY ./bin/nanocld/Cargo.toml ./bin/nanocld/Cargo.toml
-COPY ./bin/ctrl-proxy/Cargo.toml ./bin/ctrl-proxy/Cargo.toml
-COPY ./bin/ctrl-dns/Cargo.toml ./bin/ctrl-dns/Cargo.toml
+COPY ./bin/ctrlproxy/Cargo.toml ./bin/ctrlproxy/Cargo.toml
+COPY ./bin/ctrldns/Cargo.toml ./bin/ctrldns/Cargo.toml
 
 # stage 2 - Build our project
 FROM rust:1.68.0-alpine3.17 as builder
@@ -33,10 +33,10 @@ COPY ./crates/nanocld_client/src ./crates/nanocld_client/src
 COPY ./bin/nanocl/src ./bin/nanocl/src
 COPY ./bin/nanocl/build.rs ./bin/nanocl/build.rs
 COPY .git ./.git
-COPY ./bin/ctrl-proxy/src ./bin/ctrl-proxy/src
-COPY ./bin/ctrl-proxy/build.rs ./bin/ctrl-proxy/build.rs
-COPY ./bin/ctrl-proxy/specs ./bin/ctrl-proxy/specs
-COPY ./bin/ctrl-dns/src ./bin/ctrl-dns/src
+COPY ./bin/ctrlproxy/src ./bin/ctrlproxy/src
+COPY ./bin/ctrlproxy/build.rs ./bin/ctrlproxy/build.rs
+COPY ./bin/ctrlproxy/specs ./bin/ctrlproxy/specs
+COPY ./bin/ctrldns/src ./bin/ctrldns/src
 RUN cargo build --release --target=x86_64-unknown-linux-musl --features release --bin ctrl-dns
 RUN upx --lzma --best /app/target/x86_64-unknown-linux-musl/release/ctrl-dns
 
@@ -46,6 +46,6 @@ FROM scratch
 LABEL org.opencontainers.image.source https://github.com/nxthat/nanocl
 LABEL org.opencontainers.image.description The nanocl DNS controller
 
-COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/ctrl-dns /bin/ctrl-dns
+COPY --from=builder /app/target/x86_64-unknown-linux-musl/release/ctrl-dns /bin/ctrldns
 
 ENTRYPOINT ["ctrl-dns"]
