--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,7 +46,7 @@ jobs:
       run: |
         ./scripts/install_dev_image.sh
         cargo build --no-default-features --features test --bin nanocl
-        cargo build --no-default-features --features test --bin ctrl-proxy
+        cargo build --no-default-features --features test --bin ctrlproxy
         cargo build --no-default-features --features test --bin nanocld
         cargo run --no-default-features --features test --bin nanocld -- --init
         cargo run --no-default-features --features test --bin nanocld &
@@ -54,7 +54,7 @@ jobs:
         sudo mkdir -p /var/lib/nanocl/proxy
         sudo chmod 777 -R /run/nanocl
         sudo chmod 777 -R /var/lib/nanocl
-        cargo run --no-default-features --features test --bin ctrl-proxy -- --conf-dir /var/lib/nanocl/proxy &
+        cargo run --no-default-features --features test --bin ctrlproxy -- --conf-dir /var/lib/nanocl/proxy &
         sleep 8
         sudo chmod 777 -R /run/nanocl
         mkdir -p /tmp/nginx/sites-enabled
