--- a/bin/ctrldns/Cargo.toml
+++ b/bin/ctrldns/Cargo.toml
@@ -1,11 +1,11 @@
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [package]
-name = "ctrl-dns"
+name = "ctrldns"
 version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-name = "ctrl-dns"
+name = "ctrldns"
 test = true
 bench = false
 path = "src/main.rs"
