--- a/.github/workflows/nightly_image.yml
+++ b/.github/workflows/nightly_image.yml
@@ -1,12 +1,16 @@
-name: Draft ctrlproxy nightly release
+name: Draft nightly image
 
 on:
   push:
     branches:
-      - 'release-nightly-ctrlproxy-*'
+    - 'release-nightly-ctrlproxy-*'
+    - 'release-nightly-ctrldns-*'
+    - 'release-nightly-nanocld-*'
   pull_request:
     branches:
-      - 'release-nightly-ctrlproxy-*'
+    - 'release-nightly-ctrlproxy-*'
+    - 'release-nightly-ctrldns-*'
+    - 'release-nightly-nanocld-*'
     types: [opened, synchronize, closed]
 
 env:
@@ -34,7 +38,7 @@ jobs:
         echo "BRANCH_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
         echo "CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}')" >> $GITHUB_ENV
         echo "NANOCL_CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}')" >> $GITHUB_ENV
-        echo "BINARY_NAME=ctrlproxy" >> $GITHUB_ENV
+        echo "BINARY_NAME=$(echo ${GITHUB_REF##*/} | awk -F- '{print $3}')" >> $GITHUB_ENV
         echo "VERSION=$(echo ${GITHUB_REF##*/} | awk -F- '{print $5}')" >> $GITHUB_ENV
     # Print info for debug
     - name: Print Info
@@ -45,7 +49,7 @@ jobs:
         echo $VERSION
     # Build daemon image
     - name: Build image
-      run: docker buildx build --load --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache --build-arg channel=$CHANNEL -t $BINARY_NAME:nightly-$VERSION -f ./bin/ctrlproxy/Dockerfile .
+      run: docker buildx build --load --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache --build-arg channel=$CHANNEL -t $BINARY_NAME:nightly-$VERSION -f ./bin/$BINARY_NAME/Dockerfile .
     # Export it as tar.gz
     - name: Export image
       run: docker save $BINARY_NAME:nightly-$VERSION | gzip > /tmp/$BINARY_NAME-nightly-$VERSION.tar.gz
@@ -58,13 +62,13 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
     - name: Create new draft release
       if: steps.release-exists.outcome == 'failure' && steps.release-exists.conclusion == 'success'
-      run: gh release create -t $BINARY_NAME-nightly-$VERSION -d $BINARY_NAME-nightly-$VERSION -F ./bin/ctrlproxy/changelog.md /tmp/$BINARY_NAME-nightly-$VERSION.tar.gz#ctrlproxy-image;
+      run: gh release create -t $BINARY_NAME-nightly-$VERSION -d $BINARY_NAME-nightly-$VERSION -F ./bin/$BINARY_NAME/changelog.md /tmp/$BINARY_NAME-nightly-$VERSION.tar.gz#$BINARY_NAME-image;
       env:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
     - name: Update draft release
       if: steps.release-exists.outcome == 'success' && steps.release-exists.conclusion == 'success'
       run: |
         gh release delete-asset -y $BINARY_NAME-nightly-$VERSION $BINARY_NAME-nightly-$VERSION.tar.gz
-        gh release upload $BINARY_NAME-nightly-$VERSION /tmp/$BINARY_NAME-nightly-$VERSION.tar.gz#ctrlproxy-image;
+        gh release upload $BINARY_NAME-nightly-$VERSION /tmp/$BINARY_NAME-nightly-$VERSION.tar.gz#$BINARY_NAME-image;
       env:
         GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
