--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -8,7 +8,7 @@ jobs:
   clippy:
     strategy:
       fail-fast: true
-    runs-on: bigben
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository code
