--- a/.github/workflows/publish_live_image.yml
+++ b/.github/workflows/publish_live_image.yml
@@ -2,7 +2,7 @@ name: Publish Live Image
 
 on:
   release:
-    types: [published, prereleased, released]
+    types: [published]
 
 env:
   CARGO_TERM_COLOR: always
