--- a/bin/nanocld/specs/controllers/dev.dns.yml
+++ b/bin/nanocld/specs/controllers/dev.dns.yml
@@ -10,13 +10,13 @@ Cargoes:
     HostConfig:
       NetworkMode: host
 
-- Name: ctrldns
+- Name: ncddns
   Container:
     Image: ghcr.io/nxthat/nanocl-dev:dev
     Cmd:
     - watch
     - -x
-    - run --no-default-features --features dev --bin ctrldns
+    - run --no-default-features --features dev --bin ncddns
     Tty: true
     HostConfig:
       NetworkMode: system
