--- a/bin/nanocld/specs/controllers/dev.dns.yml
+++ b/bin/nanocld/specs/controllers/dev.dns.yml
@@ -6,7 +6,7 @@ Namespace: system
 Cargoes:
 - Name: dns
   Container:
-    Image: nanocl-dns:dev
+    Image: ndns:dev
     HostConfig:
       NetworkMode: host
 
