refactor: apply state return a stream

--- a/bin/nanocld/specs/controllers/dev.proxy.yml
+++ b/bin/nanocld/specs/controllers/dev.proxy.yml
@@ -21,6 +21,8 @@ Cargoes:
     Image: ghcr.io/nxthat/nanocl-dev:dev
     Cmd:
     - watch
+    - -w
+    - /project/bin/ncdproxy/src
     - -x
     - run --no-default-features --features dev --bin ncdproxy
     Tty: true
