--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,8 +49,8 @@ jobs:
     - name: Setup
       run: |
         docker pull cockroachdb/cockroach:v22.2.6
-        docker pull ghcr.io/nxthat/metrsd
-        docker pull nexthat/nanocl-get-started
+        docker pull ghcr.io/nxthat/metrsd:0.2.0
+        docker pull nexthat/nanocl-get-started:latest
         docker buildx build --load --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache -t ndns:dev -f ./bin/ncddns/dnsmasq/Dockerfile ./bin/ncddns/dnsmasq
         docker buildx build --load --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache -t nproxy:dev -f ./bin/nproxy/Dockerfile .
         cargo build --no-default-features --features test --bin nanocl
