--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Cache register
       uses: actions/cache@v3
       with:
-        path: ./buildx-cache
+        path: ./.buildx-cache
         key: buildx-cache
     # Install rust
     - uses: actions-rs/toolchain@v1
@@ -47,11 +47,11 @@ jobs:
     # Setup daemon for the tests
     - name: Setup
       run: |
-        docker pull cockroachdb/cockroach:v22.2.6
+        docker pull cockroachdb/cockroach:v22.2.7
         docker pull ghcr.io/nxthat/metrsd:0.2.0
         docker pull nexthat/nanocl-get-started:latest
-        docker buildx build --load --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache -t ndns:dev -f ./bin/ncddns/dnsmasq/Dockerfile ./bin/ncddns/dnsmasq
-        docker buildx build --load --cache-from type=local,src=/tmp/.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache -t nproxy:dev -f ./bin/nproxy/Dockerfile .
+        docker buildx build --load --cache-from type=local,src=./.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache -t ndns:dev -f ./bin/ncddns/dnsmasq/Dockerfile ./bin/ncddns/dnsmasq
+        docker buildx build --load --cache-from type=local,src=./.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache -t nproxy:dev -f ./bin/nproxy/Dockerfile .
         cargo build --no-default-features --features test --bin nanocl
         cargo build --no-default-features --features test --bin ncdproxy
         cargo build --no-default-features --features test --bin nanocld
