--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ strip = "debuginfo"
 [patch.crates-io]
 nanocl_stubs = { path = "crates/nanocl_stubs" }
 nanocld_client = { path = "crates/nanocld_client" }
+ntex-cors = { git = "https://github.com/ntex-rs/ntex-extras.git" }
 # ntex-files = { git = "https://github.com/leon3s/ntex-extras", branch = "upgrade-ntex-version" }
 # ntex-multipart = { git = "https://github.com/leon3s/ntex-extras" }
 # bollard-next = { path = "../bollard" }
