--- a/bin/nanocld/specs/controllers/proxy.yml
+++ b/bin/nanocld/specs/controllers/proxy.yml
@@ -7,6 +7,7 @@ Cargoes:
 - Name: nproxy
   Container:
     Image: ghcr.io/nxthat/nproxy:1.23.4.0
+    Tty: true
     HostConfig:
       NetworkMode: host
       Binds:
@@ -19,6 +20,7 @@ Cargoes:
 - Name: ncdproxy
   Container:
     Image: ghcr.io/nxthat/ncdproxy:0.3.1
+    Tty: true
     HostConfig:
       NetworkMode: system
       Binds:
