feature(nanocld): metrics filter and some change for the dashboard (#225)
* feature(nanocld): metrics filter and some change for the dashboard

* bugfix(deps): missing cors

* bugfix(deps): missing cors

* changelog(nanocld): dump 0.6.0

* bugfix(nanocld): missing cors for all features

* refactor(nanocld): state services

* refactor(nanocld): changelog 0.6.0 features

* feature(nanocld): changelog.md

--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -73,3 +73,4 @@ nanocld_client = { version = "0.5.0", features = ["tokio"] }
 openssl = { version = "0.10.50", features = ["vendored"] }
 utoipa = { version = "3", features = ["yaml"], optional = true }
 ntex-files = { version = "0.2.2", optional = true }
+ntex-cors = { version = "0.3.0" }
