--- a/bin/nproxy/nginx.conf
+++ b/bin/nproxy/nginx.conf
@@ -1,8 +1,7 @@
-user  nginx;
+user  root;
 worker_processes auto;
 
 pid /run/nginx.pid;
-error_log  /var/log/nginx/error.log notice;
 
 include /etc/nginx/modules-enabled/*.conf;
 
@@ -11,6 +10,9 @@ events {
   #multi_accept on;
 }
 
+##
+# HTTP Settings
+##
 http {
   ##
   # Basic Settings
@@ -48,14 +50,15 @@ http {
 
   ##
   # SSL Settings
+  # Dropping SSLv3, ref: POODLE
   ##
-  ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
   ssl_prefer_server_ciphers on;
 
   ##
   # Logging Settings
   ##
-  log_format  json_combined escape=json
+  log_format http_json escape=json
     '{'
     '"date_gmt": "$time_iso8601", '
     '"remote_addr": "$remote_addr", '
@@ -71,15 +74,21 @@ http {
     '"content_type": "$content_type", '
     '"content_length": "$content_length", '
     '"status": "$status", '
+    '"bytes_sent": "$bytes_sent", '
     '"request_time": "$request_time", '
+    '"upstream_bytes_sent": "$upstream_bytes_sent", '
+    '"upstream_bytes_received": "$upstream_bytes_received", '
+    '"upstream_response_time": "$upstream_response_time", '
+    '"upstream_connect_time": "$upstream_connect_time", '
     '"body_bytes_sent": "$body_bytes_sent", '
     '"http_referrer": "$http_referer", '
     '"http_accept_language": "$http_accept_language", '
     '"http_user_agent": "$http_user_agent"'
     '}';
 
-  access_log /var/log/nginx/access.log json_combined;
-  error_log /var/log/nginx/error.log;
+  access_log /var/log/nginx/access/http.log http_json;
+  access_log /var/log/nginx/access.log;
+  error_log /var/log/nginx/error.log debug;
 
   ## Header config for remove express
   more_set_headers "Server: nanocl";
@@ -113,9 +122,38 @@ http {
   include /etc/nginx/sites-enabled/*.conf;
 }
 
+##
+# Stream Settings (TCP/UDP)
+##
 stream {
- ##
- # Virtual Stream Configs
- ##
- include /etc/nginx/streams-enabled/*;
+  ##
+  # Logging Settings
+  ##
+  log_format stream_json escape=json
+    '{'
+    '"date_gmt": "$time_iso8601", '
+    '"remote_addr": "$remote_addr", '
+    '"upstream_addr": "$upstream_addr", '
+    '"protocol": "$protocol",'
+    '"status": "$status", '
+    '"session_time": "$session_time", '
+    '"bytes_sent": "$bytes_sent", '
+    '"bytes_received": "$bytes_received", '
+    '"upstream_bytes_sent": "$upstream_bytes_sent", '
+    '"upstream_bytes_received": "$upstream_bytes_received", '
+    '"upstream_connect_time": "$upstream_connect_time"'
+    '}';
+
+  log_format stream_basic '$remote_addr [$time_local] '
+    '$protocol $status $bytes_sent $bytes_received '
+    '$session_time';
+
+  access_log /var/log/nginx/access/stream.log stream_json;
+  access_log /var/log/nginx/access.log stream_basic;
+  error_log /var/log/nginx/error.log debug;
+
+  ##
+  # Virtual Stream Configs
+  ##
+  include /etc/nginx/streams-enabled/*;
 }
