--- a/bin/nanocld/specs/controllers/dev.proxy.yml
+++ b/bin/nanocld/specs/controllers/dev.proxy.yml
@@ -11,6 +11,8 @@ Cargoes:
     HostConfig:
       NetworkMode: host
       Binds:
+      - /run:/run
+      - {state_dir}/proxy/logs:/var/log/nginx/access
       - {state_dir}/proxy/html:/usr/share/nginx/html
       - {state_dir}/proxy/conf.d:/etc/nginx/conf.d
       - {state_dir}/proxy/sites-enabled:/etc/nginx/sites-enabled
@@ -30,8 +32,9 @@ Cargoes:
       NetworkMode: system
       Binds:
       - ./:/project
+      - /run/nanocl:/run/nanocl
       - /usr/local/cargo/registry/cache:/usr/local/cargo/registry/cache
+      - {state_dir}/proxy/logs:/var/log/nginx/access
       - {state_dir}/proxy/conf.d:/etc/nginx/conf.d
       - {state_dir}/proxy/sites-enabled:/etc/nginx/sites-enabled
       - {state_dir}/proxy/streams-enabled:/etc/nginx/streams-enabled
-      - /run/nanocl:/run/nanocl
