--- a/bin/ncdproxy/Cargo.toml
+++ b/bin/ncdproxy/Cargo.toml
@@ -34,3 +34,6 @@ futures = "0.3.25"
 log = "0.4.17"
 env_logger = "0.10.0"
 serde = "1.0.154"
+notify = { version = "5.1.0", default-features = false, features = [
+  "macos_kqueue",
+] }
