--- a/bin/nproxy/Dockerfile
+++ b/bin/nproxy/Dockerfile
@@ -1,5 +1,7 @@
 FROM nginx:1.23.4
 
+USER root
+
 ENV TZ="Europe/Paris"
 RUN apt-get update -y
 
@@ -8,15 +10,17 @@ RUN apt-get install -y certbot python3-certbot-nginx
 
 EXPOSE 80/tcp 443/tcp
 
-# Copy default nginx config
-COPY ./bin/nproxy/nginx.conf /etc/nginx/nginx.conf
-# Copy default error pages
-COPY ./bin/nproxy/html /html
-
-COPY ./bin/nproxy/entrypoint.sh /entrypoint.sh
 RUN mkdir -p /var/lib/nginx/cache/public
 RUN mkdir -p /var/lib/nginx/cache/private
 RUN mkdir -p /tmp/nginx/body
+RUN mkdir -p /var/log/nginx/access
+RUN touch /var/log/nginx/access/http.log
+RUN touch /var/log/nginx/access/stream.log
+
+COPY ./bin/nproxy/html /html
+COPY ./bin/nproxy/entrypoint.sh /entrypoint.sh
+COPY ./bin/nproxy/nginx.conf /etc/nginx/nginx.conf
+
 RUN chmod +x /entrypoint.sh
 
 LABEL org.opencontainers.image.source https://github.com/nxthat/nanocl
